# spy-var-forecasting

./: .gitignore  README.md  pyproject.toml
v2/: README_CN.md  plot_results.py  report.md  report_CN.md  run_all.py  spy_data.csv
v2/models/: garch.py  historical.py  lstm.py  nn.py  parametric.py  quantile_reg.py
v2/results/: garch_normal.csv  garch_normal_500.csv  garch_t.csv  garch_t_500.csv  gjr_garch_t.csv  gjr_garch_t_500.csv  historical.csv  historical_weighted.csv  lstm_garch_returns_500.csv  lstm_garch_returns_500_meta.json  lstm_har_500.csv  lstm_har_500_meta.json  lstm_returns_500.csv  lstm_returns_500_meta.json  lstm_returns_tuned_500.csv  lstm_returns_tuned_500_meta.json  mlp_caviar_asv.csv  mlp_caviar_asv_meta.json  mlp_caviar_asv_search_log.csv  mlp_caviar_sv.csv  mlp_caviar_sv_meta.json  mlp_caviar_sv_search_log.csv  mlp_garch.csv  mlp_garch_500.csv  mlp_garch_500_meta.json  mlp_garch_meta.json  mlp_garch_search_log.csv  mlp_har.csv  mlp_har_meta.json  mlp_har_search_log.csv  mlp_riskmetrics.csv  mlp_riskmetrics_meta.json  mlp_riskmetrics_search_log.csv  parametric_normal.csv  parametric_t.csv  quantile_reg.csv  quantile_reg_500.csv
v2/tests/: test_data.py  test_features.py  test_garch.py  test_historical.py  test_lstm.py  test_nn.py  test_nn_rolling.py  test_parametric.py  test_quantile_reg.py  test_training.py
v2/utils/: data.py  training.py
